fixing tower banner on mobile

--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -1505,6 +1505,10 @@ p {
     }
 }
 
+.tower-banner{
+    display:none;
+}
+
 .rotate-dialogue,
 .overlay__content,
 .overlay__opt-out,
